tests/sumo/basic/container/errors/duplicate_person_id/errors.sumo
Warning: A person has the same id as container '1'. Starting with SUMO 1.9.0 this will be an error.
Warning: Container '1' aborted waiting for v1 at edge 'beg'.
